GNOME Bugzilla – Bug 584539
Crash in app monitor on 64 bits
Last modified: 2009-06-05 13:54:58 UTC
Dan bumped into a crash that occurs on 64 bits processors because in save_to_file(), the code assumes pointers and integers are the same size. Specifically, that's in g_hash_table_iter_next().
Created attachment 135763 [details] [review] Fix-crash-in-app-monitor-on-64-bits-CPUs Hope that works...
Looks good, please go ahead and push.
I'd just like a confirmation from Dan, because there may be other abuses of pointers that we didn't catch.
sorry, yes, it's fine. (I would have said somehting, but I could have sworn I'd seen this get committed a few days ago)
Committed. Dear 64 bits users, come to us!