Fix crash in app monitor on 64 bits CPUs

Pointers and integers are not the same size, use GPOINTER_TO_INT() for conversion.

http://bugzilla.gnome.org/show_bug.cgi?id=584539